test/compile_errors/err_derive_default_field_without_default.w
//! expect-error: unknown method 'default'

type NoDefault { value: i32 }

@[derive(Default)]
type UsesNoDefault { value: NoDefault }

fn main:
    let _ = UsesNoDefault.default()
